--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,10 @@
 table {
     width: 100%;
+    font-size: 12pt;
+
+    @media print {
+        font-size: 8pt;
+    }
 }
 
 .container {
@@ -23,10 +28,13 @@ table {
 }
 
 table .unit-stat {
-    padding: 10px;
+    padding: 5px;
 
     & td {
-        width: 12.5%;
+        &:first-child {
+            width: 16%;;
+        }
+        width: 12%;
         &:not(:first-child) {
             text-align: center;
         }
@@ -34,10 +42,18 @@ table .unit-stat {
 }
 
 .box-border {
-    margin: 20px 0;
+    margin: 10px 0;
     border-width: 1px;
     border-color: #CCC;
     border-style: solid;
     border-radius: 4px;
     // box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+
+.abilities {
+    font-size: 12px;
+
+    @media print {
+        font-size: 6pt;
+    }
 }
